--- a/contactos.html
+++ b/contactos.html
@@ -4,8 +4,9 @@
 	 <!-- Metadados básicos do documento -->
     <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura a viewport para responsividade -->
-    <link rel="stylesheet" href="style2.css" /> <!-- Link para o arquivo CSS externo -->
-    <title>Francisco Martins - Portfólio</title> <!-- Título da página exibido na aba do navegador -->
+    <!-- <link rel="stylesheet" href="style2.css"> --> <!-- Link para o arquivo CSS externo -->
+    <link rel="stylesheet" href="style.css">
+	<title>Francisco Martins - Portfólio</title> <!-- Título da página exibido na aba do navegador -->
 </head>
 <body>
     <div class="cabecalho">
@@ -102,12 +103,11 @@
 	<div class="mapa">
 		<iframe 
 			src="https://www.google.com/maps/embed?pb=!3m2!1spt-PT!2spt!4v1747235851476!5m2!1spt-PT!2spt!6m8!1m7!1smFNWk2_EOk5k8Q9N699OPg!2m2!1d39.81965920954299!2d-7.511883930388694!3f211.94756846931816!4f-5.878513368181501!5f0.4000000000000002"
-			width="100%" 
-			height="300" 
-			style="border:0;" 
+			title="Localização da ESTCB - Escola Superior de Tecnologia de Castelo Branco (IPCB) - Vista do portão de entrada principal"
 			allowfullscreen="" 
-			loading="lazy"> <!-- Atributo loading="lazy" para carregamento otimizado -->
+			loading="lazy"> 
 		</iframe>
+		<!-- Atributo loading="lazy" para carregamento otimizado -->
 	</div>
 	
 	<!-- Rodapé do site (comum a todas as páginas) -->
