--- a/autor.html
+++ b/autor.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	 <!-- Metadados básicos do documento -->
     <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura a viewport para responsividade -->
-    <link rel="stylesheet" href="style2.css" /> <!-- Link para o arquivo CSS externo -->
-    <title>Francisco Martins - Portfólio</title> <!-- Título da página exibido na aba do navegador -->
+    <!-- <link rel="stylesheet" href="style2.css"> --> <!-- Link para o arquivo CSS externo -->
+    <link rel="stylesheet" href="style.css">
+	<title>Francisco Martins - Portfólio</title> <!-- Título da página exibido na aba do navegador -->
 </head>
 	<body>
 		<!-- Cabeçalho do site (igual em todas as páginas) -->
@@ -36,7 +37,7 @@
 				<!-- Seção da foto do autor -->
 				<div class="foto-autor">
 					<!-- Foto do autor com texto alternativo -->
-					<img src="imgs/eu.jpg" alt="Foto de Francisco Martins" class="foto-perfil">
+					<img src="imgs/eu.jpg" alt="Foto de Francisco Martins" class="foto-perfil" loading="lazy";>
 				</div>
 				<!-- Seção de informações textuais sobre o autor -->
 				<div class="info-autor">
@@ -62,11 +63,11 @@
 					<iframe 
 						width="200" 
 						height="355" 
-						src="https://www.youtube.com/embed/gGWQfV1FCis" 
-						title="YouTube Short" 
-						frameborder="0" 
+						src="https://www.youtube-nocookie.com/embed/gGWQfV1FCis" 
+						title="real HTML programmers debug in 3D"  
 						allowfullscreen
-						aria-label="Vídeo humorístico sobre debugging em 3D">
+						loading="lazy"
+						>
 					</iframe>
 				</div>
 			</div>
